// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should handle listItem 1`] = `
<scale-list ordered="">
  <template shadowrootmode="open">
    <ol class="list list--type-ordered" part="base ordered">
      <slot></slot>
    </ol>
  </template>
  <scale-list-item></scale-list-item>
</scale-list>
`;

exports[`List should match snapshot 1`] = `
<scale-list>
  <template shadowrootmode="open">
    <ul class="list" part="base">
      <slot></slot>
    </ul>
  </template>
  default
</scale-list>
`;
